<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_trending_events"
            android:icon="@drawable/ic_trending_up_black_24dp"
            android:title="@string/trending_events_string" />
        <item
            android:id="@+id/nav_your_events"
            android:icon="@drawable/ic_event_black_24dp"
            android:title="@string/your_events_string" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings_string" />
        <item
            android:id="@+id/nav_log_out"
            android:icon="@drawable/ic_account_box_black_24dp"
            android:title="@string/log_out_string" />
    </group>

</menu>
