<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="8dp"
    android:paddingBottom="8dp">

    <ImageView
        android:id="@+id/eventIcon"
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:layout_marginStart="16dp"
        android:scaleType="centerCrop"
        android:background="@color/white" />

    <LinearLayout
        android:id="@+id/eventInfoLayout"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp">

        <TextView
            android:id="@+id/eventTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list_item_event_title"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_alignParentLeft="true"/>

        <TextView
            android:id="@+id/dateTimeTextView"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list_item_date_time_title"/>

        <TextView
            android:layout_marginTop="2dp"
            android:id="@+id/locationTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list_item_location_title"/>

    </LinearLayout>

</LinearLayout>